@@ -1,3 +1,8 @@
+2011-08-04 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
+	* tag V01-05-65
+	* Change "Clone" option name to "Deep Clone".
+	* Change "Copy" option name to "Clone".
+
 2011-07-22 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
 	* tag V01-05-64
 	* Add "Copy Sequence" option (bug/feature 75955).
